[project]
name = "modern-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.21.0",
    "adjusttext",
    "asttokens",
    "bertviz>=1.4.1",
    "click",
    "colorama",
    "comm",
    "contourpy",
    "cycler",
    "datasets>=4.0.0",
    "debugpy",
    "decorator",
    "ecco",
    "exceptiongroup",
    "executing",
    "filelock",
    "fonttools",
    "fsspec",
    "gensim",
    "ipykernel",
    "ipython",
    "jedi",
    "jinja2",
    "joblib",
    "jupyter-client",
    "jupyter-core",
    "kiwisolver",
    "llvmlite",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mpmath",
    "nest-asyncio",
    "networkx",
    "nltk",
    "numba",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "pillow",
    "platformdirs",
    "prompt-toolkit",
    "psutil",
    "pure-eval",
    "pygments",
    "pynndescent",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "pywin32",
    "pyzmq",
    "regex",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentencepiece>=0.2.0",
    "six",
    "smart-open",
    "stack-data",
    "sympy",
    "threadpoolctl",
    "torch",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers[torch]>=4.54.1",
    "typing-extensions",
    "tzdata",
    "umap-learn",
    "wcwidth",
    "wordcloud",
    "wrapt",
]

[tool.uv.sources]
ecco = { git = "https://github.com/SalvatoreRa/ecco" }
